# Stock_Upgrades

./: .gitignore  Makefile  main.py  pyproject.toml
.github/workflows/: main.yml
Data/Archive/Daily/: 2022-01-27.json  2022-01-28.json  2022-01-31.json  2022-02-01.json  2022-02-02.json  2022-02-03.json  2022-02-04.json  2022-02-07.json  2022-02-08.json  2022-02-09.json  2022-02-10.json  2022-02-11.json  2022-02-15.json  2022-02-16.json  2022-02-17.json  2022-02-18.json  2022-02-24.json  2022-02-25.json  2022-02-28.json  2022-03-01.json  2022-03-02.json  2022-03-03.json  2022-03-04.json  2022-03-16.json  2022-03-17.json  2022-03-18.json  2022-03-21.json  2022-03-23.json  2022-03-24.json  2022-03-25.json  2022-03-28.json  2022-03-31.json  2022-04-01.json  2022-04-04.json  2022-04-05.json  2022-04-06.json  2022-04-07.json  (+252 more)
Data/Queue/: Insight.json  Queue.json
Data/Rating/: A.json  AAL.json  AAP.json  AAPL.json  ABBV.json  ABC.json  ABMD.json  ABT.json  ACN.json  ADBE.json  ADI.json  ADM.json  ADP.json  ADSK.json  AEE.json  AEP.json  AES.json  AFL.json  AIG.json  AIZ.json  AJG.json  AKAM.json  ALB.json  ALGN.json  ALK.json  ALL.json  ALLE.json  ALNY.json  AMAT.json  AMCR.json  AMD.json  AME.json  AMGN.json  AMP.json  AMT.json  AMZN.json  ANET.json  ANSS.json  ANTM.json  AON.json  (+462 more)
Data/Tickers/: Ticker_List.csv  ticker_List.csv  ticker_list.csv
Data/proxy/: proxy.txt
src/: BestValue.py  DailyInsight.py  DailyQueue.py  ProxyService.py  RatingsService.py  other.py  proxy_service.py  ratings.py
src/TweetService/: generate.js  package-lock.json  package.json  tweet.js
(+280 files in other folders)
