[tool.poetry]
name = "upgrades_api"
version = "0.1.0"
description = "stock upgrades tracker"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.10.0"
html-table-extractor = "^1.4.1"
requests = "^2.26.0"
pandas = "^1.3.4"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
